--- a/main.css
+++ b/main.css
@@ -1,14 +1,17 @@
-* {
-  box-sizing: border-box;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  line-height: 1.5;
 }
 
 body {
   width: 100%;
   height: 100vh;
-  background: url(assets/freedom.jpg) no-repeat center;
+  background: url('assets/freedom.jpg') no-repeat center;
   background-size: cover;
   color: #333;
-  line-height: 1.5;
 }
 
 .wrapper {
@@ -18,13 +21,13 @@ body {
   text-align: center;
 }
 
-#quote {
+.quote {
   font-family: 'Julius Sans One', sans-serif;
-  font-size: 2.5rem;
-  padding-top: 4rem;
+  font-size: 2.5rem; 
 }
 
-#author {
+.author {
   font-family: 'Crimson Text', serif;
+  font-size: 1.5rem;
   font-style: italic;
 }
